RESOLVED FIXED187285
[iOS WK2] We fail to make surfaces volatile when suspending, increasing memory impact
https://bugs.webkit.org/show_bug.cgi?id=187285
Summary [iOS WK2] We fail to make surfaces volatile when suspending, increasing memor...
Simon Fraser (smfr)
Reported 2018-07-02 19:37:03 PDT
[iOS WK2] We fail to make surfaces volatile when suspending, increasing memory impact
Attachments
Patch (4.36 KB, patch)
2018-07-02 19:42 PDT, Simon Fraser (smfr)
thorton: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews206 for win-future (12.87 MB, application/zip)
2018-07-02 21:39 PDT, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2018-07-02 19:42:14 PDT
Simon Fraser (smfr)
Comment 2 2018-07-02 19:42:43 PDT
Simon Fraser (smfr)
Comment 3 2018-07-02 19:43:14 PDT
It's hard to assert that we get this notification, since the marking layers volatile is in the web process, but the notification fires in the UI process.
EWS Watchlist
Comment 4 2018-07-02 21:39:34 PDT
Comment on attachment 344161 [details] Patch Attachment 344161 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8420224 New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 5 2018-07-02 21:39:46 PDT
Created attachment 344163 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Simon Fraser (smfr)
Comment 6 2018-07-03 14:39:07 PDT
Note You need to log in before you can comment on or make changes to this bug.